[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-phitk-autorender"
version = "0.1.0"
description = "Phigros谱面自动渲染NoneBot2插件，调用phi-tk-cli生成谱面视频"
authors = [
    { name = "CNMDBook", email = "3466756568@qq.com" }
]
dependencies = [
  "nonebot2>=2.3.0",
  "nonebot-adapter-onebot>=2.4.0",
  "aiohttp>=3.9.0",
  "aiofiles>=23.0.0",
  "pyyaml>=6.0"
]
requires-python = ">=3.8,<4.0"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0" }
keywords = ["nonebot2", "plugin", "phigros", "render", "phi-tk"]

[project.urls]
homepage = "https://github.com/CMDBookDevelope/nonebot-plugin-phitk-autorender"
repository = "https://github.com/CMDBookDevelope/nonebot-plugin-phitk-autorender"
documentation = "https://github.com/CMDBookDevelope/nonebot-plugin-phitk-autorender#readme"

# setuptools 包查找配置（移到这里，不再放project块）
[tool.setuptools]
packages = { find = {}}

# NoneBot 插件市场识别配置
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_phitk_autorender"]

